fix: overflow-x blocked

--- a/src/App.css
+++ b/src/App.css
@@ -4,4 +4,8 @@
     padding: 0;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap');
